[package]
name = "rs-dnsdist-console"
version = "0.1.0"
authors = ["Remi Gacogne <rgacogne-github@coredump.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
sodiumoxide = "0.2.6"
thiserror = "1.0"
