[package]
name = "rs-dnsdist-console"
version = "0.1.0"
authors = ["Remi Gacogne <rgacogne-github@coredump.fr>"]
edition = "2018"
description = "A library a utility implementing dnsdist's console protocol"

[dependencies]
base64 = "0.13.0"
sodiumoxide = "0.2.6"
thiserror = "1.0"

[lib]
name = "lib_rs_dnsdist_console"
path = "src/lib.rs"

[[bin]]
name = "rs-dnsdist-console"
path = "src/main.rs"
